# icfpc2016-origami

./: Cargo.toml  README.md
json/: origami-unfold.json  origami.json  problem-0003.json  problem-0004.json  problem-0005.json  problem-0007.json  problem-0009.json  problem-0010.json  problem-0012.json  problem-0013.json  problem-0016.json  problem-0017.json  problem-0019.json  problem-0020.json  problem-0021.json  problem-0022.json  problem-0023.json  problem-0024.json  problem-0026.json  problem-0027.json  problem-0028.json  problem-0029.json  problem-0030.json  problem-0031.json  problem-0032.json  problem-0033.json  problem-0034.json  problem-0036.json  problem-0037.json  problem-0039.json  problem-0040.json  problem-0043.json  problem-0044.json  problem-0045.json  problem-0046.json  problem-0048.json  problem-0050.json  problem-0051.json  problem-0052.json  problem-0053.json  (+712 more)
problems/: problem-0346.txt  problem-0991.txt  problem-1000011.txt  problem-1000012.txt  problem-1000013.txt  problem-1000015.txt  problem-1000016.txt  problem-1284.txt  problem-1340.txt  problem-2059.txt  problem-2304.txt  problem-2608.txt  problem-2700.txt  problem-2941.txt  problem-3933.txt  problem-4442.txt  problem-4563.txt  problem-4624.txt  problem-4749.txt  problem-4804.txt  problem-4863.txt  problem-4952.txt  problem-5007.txt  problem-5014.txt  problem-5015.txt  problem-5164.txt  problem-5196.txt  problem-5312.txt  problem-5313.txt  problem-5344.txt  problem-5365.txt  problem-5381.txt  problem-5382.txt  problem-5450.txt  problem-5585.txt  problem-5589.txt  problem-5622.txt  (+32 more)
(+270 files in other folders)
