[package]
authors = ["Hayato Ito <hayato@google.com>"]
name = "origami"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
clap = "2.5"
env_logger = "0.3"
euclid = "0.8.0"
flate2 = "0.2.14"
hyper = "0.9.10"
lazy_static = "0.2"
log = "0.3"
loggerv = "0.2"
maplit = "0.1.3"
ndarray = "0.6"
num = "0.1.34"
num_cpus = "0.2"
ordered-float = "0.2"
rand = "0.3"
regex = "0.1"
serde = "0.8.0"
serde_json = "0.8.0"
serde_macros = "0.8.0"
websocket = "0.17.1"
